<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    
    <TextView  
	    	android:layout_width="wrap_content" 
	    	android:layout_height="wrap_content" 
	    	android:text="@string/name" />

    <EditText
        	android:id="@+id/name"
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:background="@android:drawable/editbox_background" />
	    
    <TextView  
	    	android:layout_width="wrap_content" 
	    	android:layout_height="wrap_content" 
	    	android:text="@string/description" />

    <EditText
        	android:id="@+id/description"
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:background="@android:drawable/editbox_background" />
        	
        	
    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/startDate" />

    <Button android:id="@+id/startDate"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="" />

	<TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/endDate" />

    <Button android:id="@+id/endDate"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="" />
	    
	<Button android:id="@+id/save"
	    	android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
			android:text="@string/save"
			android:padding="5dip" />
</LinearLayout>