<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    
    <TextView
			android:layout_width="wrap_content" 
	    	android:layout_height="wrap_content" 
	    	android:text="@string/name" />

    <EditText
        	android:id="@+id/name"
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:background="@android:drawable/editbox_background" />
        	
    <TextView
	    	android:layout_width="wrap_content" 
	    	android:layout_height="wrap_content" 
	    	android:text="@string/text" />

    <EditText
        	android:id="@+id/text"
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:background="@android:drawable/editbox_background" />
	    
	<Button android:id="@+id/save"
	    	android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
			android:text="@string/save"
			android:padding="5dip" />
</LinearLayout>